--- a/_posts/2014-03-06-site-changes.html
+++ b/_posts/2014-03-06-site-changes.html
@@ -8,7 +8,7 @@ title: Site changes
 short: site-changes
 description: I decided to change my site. You may find short list of changes below.
 ---
-<h2><a href="#list" class="anchor" name="list"><span class="octicon octicon-link"></span></a>The list of changes:</h2>
+<h2><a href="#list" class="anchor" id="list"><span class="octicon octicon-link"></span></a>The list of changes:</h2>
 <ul>
   <li>I rented a <code>arcanis.name</code> domain. Now I have a normal address, as well as all normal people have it. Small description of how to do it. Firstly, you should rent domain and activate DNS editing (it is called <a href="http://www.nic.ru/dns/service/dns_hosting/" title="Service page">DNS-master</a> for Ru-center). I pay about $30 in year. Then you should create CNAME file in your repository; this file has line with your domain name. And finally you should create two DNS records for your domain:
 
