--- a/ru/_posts/2014-03-06-site-changes.html
+++ b/ru/_posts/2014-03-06-site-changes.html
@@ -8,7 +8,7 @@ title: Изменения сайта
 short: site-changes
 description: Решил немного поиграться с сайтом. Краткий список изменений ниже.
 ---
-<h2><a href="#list" class="anchor" name="list"><span class="octicon octicon-link"></span></a>Cписок изменений:</h2>
+<h2><a href="#list" class="anchor" id="list"><span class="octicon octicon-link"></span></a>Cписок изменений:</h2>
 <ul>
   <li>Арендовал домен <code>arcanis.name</code>. Теперь, как и все белые люди, имею нормальный адрес. Небольшое описание (мне, как человеку далекому от интернет-технологий, пришлось немного попариться на эту тему). Арендуем домен, подключаем услугу редактирования DNS (для Ru-center <a href="http://www.nic.ru/dns/service/dns_hosting/" title="Сервис">DNS-master</a>) - суммарно мне обошлось около 1100 рублей/год. Кладем в наш репозиторий с сайтом файл CNAME, содержащий имя желаемого домена. Идем и добавляем две записи в DNS для нашего домена:
 
