--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ title: arcanis' homepage
 <!-- redirection to russian page -->
       <section>
 
-<h3><a href="#welcome" class="anchor" name="welcome"><span class="octicon octicon-link"></span></a>Welcome</h3>
+<h3><a href="#welcome" class="anchor" id="welcome"><span class="octicon octicon-link"></span></a>Welcome</h3>
 <p>Welcome to my homepage, <code>`echo $USERNAME`</code>. You may read about me on <a href="/about" title="About">the link</a>. I'm sorry I don't know html/php/ruby/etc (but I know GoogleFOO! At least, I think so), therefore this page may not look very pretty. But I tried (or may be not). In the blog I will write some papers about science, programming, living in Archlinux system and may be package maintaining. Also I will create pages for some of <a href="https://github.com/arcan1s" title="GitHub">my projects</a>.</p>
 
-<h3><a href="#contact" class="anchor" name="contact"><span class="octicon octicon-link"></span></a>Contact me</h3>
+<h3><a href="#contact" class="anchor" id="contact"><span class="octicon octicon-link"></span></a>Contact me</h3>
 <p>If you have a question or something else you may <a href="/about" title="About">contact me</a>. If you want to suggest a pull request or to create a bug report for these pages feel free to visit <a href="https://github.com/arcan1s/arcan1s.github.io" title="Pages repository">its GitHub repository</a> and do it.</p>
