--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -19,31 +19,31 @@ links:
     - Archlinux <a href="https://aur.archlinux.org/packages/kdeplasma-applets-pytextmonitor" title="AUR">AUR package</a>
 ---
 <!-- info block -->
-<h2><a href="#information" class="anchor" name="info"><span class="octicon octicon-link"></span></a>Information</h2>
+<h2><a href="#information" class="anchor" id="info"><span class="octicon octicon-link"></span></a>Information</h2>
 <p>A minimalistic Plasmoid script written on <code>Python2</code>. It looks like widgets in <a href="http://awesome.naquadah.org/" title="Awesome Homepage">Awesome WM</a>. My plasmoid is highly and easily configurable and does not clutter your KDE system. Also this packages has an additional <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines" title="Developers tutorial">DataEngine</a> written on <code>CPP</code> (old version was written on <code>Python2</code>).</p>
 
 <p><b>NOTE:</b> <a href="https://github.com/arcan1s/pytextmonitor/issues/14" title="Ticket">LOOKING FOR TRANSLATORS!</a></p>
 
-<h3><a href="#devel" class="anchor" name="devel"><span class="octicon octicon-link"></span></a>Developers and contributors</h3>
+<h3><a href="#devel" class="anchor" id="devel"><span class="octicon octicon-link"></span></a>Developers and contributors</h3>
 <ul>
   {% for devel in page.developers %}
     <li>{{ devel }}</li>
   {% endfor %}
 </ul>
 
-<h3><a href="#license" class="anchor" name="license"><span class="octicon octicon-link"></span></a>License</h3>
+<h3><a href="#license" class="anchor" id="license"><span class="octicon octicon-link"></span></a>License</h3>
 <ul>
   <li>{{ page.license }}</li>
 </ul>
 
-<h3><a href="#changelog" class="anchor" name="changelog"><span class="octicon octicon-link"></span></a>Changelog</h3>
+<h3><a href="#changelog" class="anchor" id="changelog"><span class="octicon octicon-link"></span></a>Changelog</h3>
 <p><a href="https://github.com/arcan1s/pytextmonitor/blob/master/CHANGELOG" title="GitHub">CHANGELOG</a></p>
 <!-- end of info block -->
 
 <!-- install block -->
-<h2><a href="#install" class="anchor" name="install"><span class="octicon octicon-link"></span></a>Installation</h2>
+<h2><a href="#install" class="anchor" id="install"><span class="octicon octicon-link"></span></a>Installation</h2>
 
-<h3><a href="#instruction" class="anchor" name="instruction"><span class="octicon octicon-link"></span></a>Instruction</h3>
+<h3><a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Instruction</h3>
 <ul>
   <li><p>Download an <a href="https://github.com/arcan1s/pytextmonitor/releases" title="GitHub">archive</a> with latest version of source files.</p></li>
   <li><p>Extract it and install:</p>
@@ -69,7 +69,7 @@ sudo make install
   </li>
 </ul>
 
-<h3><a href="#dependencies" class="anchor" name="dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h3>
+<h3><a href="#dependencies" class="anchor" id="dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h3>
 <p>I want note that all were tested on latest version of dependencies.</p>
 <ul>
   <li>kdebase-workspace</li>
@@ -86,22 +86,22 @@ sudo make install
 <!-- end of install block -->
 
 <!-- howto block -->
-<h2><a href="#howto" class="anchor" name="howto"><span class="octicon octicon-link"></span></a>How to use</h2>
+<h2><a href="#howto" class="anchor" id="howto"><span class="octicon octicon-link"></span></a>How to use</h2>
 <p>Open your Plasma widgetes and select <code>Py Text Monitor</code>.</p>
 
-<h3><a href="#tips" class="anchor" name="tips"><span class="octicon octicon-link"></span></a>Tips & tricks</h3>
+<h3><a href="#tips" class="anchor" id="tips"><span class="octicon octicon-link"></span></a>Tips & tricks</h3>
 <p>You may use different colors for labels. Just put label text into html code. See <a href="https://github.com/arcan1s/pytextmonitor/issues/9" title="GitHub">issue</a> for more details.</p>
 
 <p>Numbering of elements of temperature, HDD usage, HDD speed, HDD temperature refers to elements order from second tab (<i>Advanced settings</i>). You should add item to the required listWidget first. And the first element in the listWidget will be <code>$tag0</code>. See <a href="https://github.com/arcan1s/pytextmonitor/issues/17" title="GitHub">issue</a> for more details.</p>
 <!-- end of howto block -->
 
 <!-- config block -->
-<h2><a href="#config" class="anchor" name="config"><span class="octicon octicon-link"></span></a>Configuration</h2>
+<h2><a href="#config" class="anchor" id="config"><span class="octicon octicon-link"></span></a>Configuration</h2>
 
-<h3><a href="#deconf" class="anchor" name="deconf"><span class="octicon octicon-link"></span></a>DataEngine configuration</h3>
+<h3><a href="#deconf" class="anchor" id="deconf"><span class="octicon octicon-link"></span></a>DataEngine configuration</h3>
 <p>You may edit DataEngine configuration. It is <code>/usr/share/config/extsysmon.conf</code> or <code>$HOME/.kde4/share/config/extsysmon.conf</code> depending on the type of installation. Uncomment needed line and edit it.</p>
 
-<h4><a href="#deoptions" class="anchor" name="deoptions"><span class="octicon octicon-link"></span></a>DataEngine options</h4>
+<h4><a href="#deoptions" class="anchor" id="deoptions"><span class="octicon octicon-link"></span></a>DataEngine options</h4>
 <table>
   <tr>
     <th>CUSTOM</th>
@@ -145,7 +145,7 @@ sudo make install
   </tr>
 </table>
 
-<h3><a href="#widconf" class="anchor" name="widconf"><span class="octicon octicon-link"></span></a>Widget configuration</h3>
+<h3><a href="#widconf" class="anchor" id="widconf"><span class="octicon octicon-link"></span></a>Widget configuration</h3>
 <p>For edited output you must open Settings window and setup output format in lines. Label order will changed if you change slider position. HTML tags in label work normally.<br>
 <b>NOTE</b> You do not may set to show <code>$cpu</code> in swap label for example. <b><code>$cpu</code> will work only in cpu label.</b></p>
 
@@ -373,7 +373,7 @@ sudo make install
   </tr>
 </table>
 
-<h4><a href="#advanced" class="anchor" name="advanced"><span class="octicon octicon-link"></span></a>Advanced settings</h4>
+<h4><a href="#advanced" class="anchor" id="advanced"><span class="octicon octicon-link"></span></a>Advanced settings</h4>
 <p><b>Enable background:</b> Uncheck to disable default background and set transparent one.</p>
 
 <p><b>Vertical layout:</b> Use vertical layout instead of horizontal one.</p>
@@ -500,10 +500,10 @@ sudo make install
 
 <p><b>AC device:</b> File with AC information. The file (<code>/sys/class/power_supply/AC/online</code> by default) should contain <code>1</code> if AC is online.</p>
 
-<h4><a href="#tooltips" class="anchor" name="tooltips"><span class="octicon octicon-link"></span></a>Tooltips</h4>
+<h4><a href="#tooltips" class="anchor" id="tooltips"><span class="octicon octicon-link"></span></a>Tooltips</h4>
 <p>Since version 1.7.0 CPU, CPU clock, memory, swap and network labels support graphical tooltip. To enable them just make the needed checkboxes a fully checked. The number of stored values can be set in the tab. Colors of graphs are configurable too.</p>
 
-<h4><a href="#deguiconf" class="anchor" name="deguiconf"><span class="octicon octicon-link"></span></a>DataEngine settings</h4>
+<h4><a href="#deguiconf" class="anchor" id="deguiconf"><span class="octicon octicon-link"></span></a>DataEngine settings</h4>
 <p><b>Custom command:</b> <i><b>NOTE</b> this label may cause the computer freeze.</i> Commands, which will be run for custom label. For example, <code>wget -qO- http://ifconfig.me/ip</code> will return external IP.</p>
 
 <p><b>Desktop cmd:</b> Type a command which will be run for desktop DataEngine. Default is <code>qdbus org.kde.kwin /KWin currentDesktop</code>.</p>
@@ -559,10 +559,10 @@ sudo make install
 
 <p><b>Music player:</b> Select one of supported music playes for player label.</p>
 
-<h3><a href="#desktoppanel" class="anchor" name="desktoppanel"><span class="octicon octicon-link"></span></a>PTM desktop panel</h3>
+<h3><a href="#desktoppanel" class="anchor" id="desktoppanel"><span class="octicon octicon-link"></span></a>PTM desktop panel</h3>
 <p>Since version 1.11.0 PyTextMonitor provides a minimalistic panel for monitoring on desktops written on <code>C++</code>. And yes, it looks like the same panel in Awesome.</p>
 
-<h4><a href="#ptmdpconf" class="anchor" name="ptmdpconf"><span class="octicon octicon-link"></span></a>Desktop panel configuration</h4>
+<h4><a href="#ptmdpconf" class="anchor" id="ptmdpconf"><span class="octicon octicon-link"></span></a>Desktop panel configuration</h4>
 <p><b>Enable background: </b> Uncheck to disable default background and set transparent one.</p>
 
 <p><b>Vertical layout:</b> Use vertical layout instead of horizontal one.</p>
@@ -595,9 +595,9 @@ sudo make install
 <!-- end of config block -->
 
 <!-- gui block -->
-<h2><a href="#gui" class="anchor" name="gui"><span class="octicon octicon-link"></span></a>Graphical user interface</h2>
+<h2><a href="#gui" class="anchor" id="gui"><span class="octicon octicon-link"></span></a>Graphical user interface</h2>
 
-<h2><a href="#screenshots" class="anchor" name="screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h2>
+<h2><a href="#screenshots" class="anchor" id="screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h2>
 <div class="thumbnails">
   {% assign scrdesc = "Widget (clickable)" %}
   {% assign scrname = "pytextmonitor_widget" %}
