--- a/projects/reportabug.html
+++ b/projects/reportabug.html
@@ -12,27 +12,27 @@ license: LGPLv3
 links:
 ---
 <!-- info block -->
-<h2><a href="#info" class="anchor" name="info"><span class="octicon octicon-link"></span></a>Information</h2>
+<h2><a href="#info" class="anchor" id="info"><span class="octicon octicon-link"></span></a>Information</h2>
 <p>Qt application/library which allows users to create an issue for projects which are hosted on GitHub. It may work over <a href="https://github.com" title="GitHub">GitHub</a> or <a href="https://gitreports.com/" title="GitReports">GitReport</a>. It works fine, but it was created as proof-of-concept.</p>
 
-<h3><a href="#devel" class="anchor" name="devel"><span class="octicon octicon-link"></span></a>Developers and contributors</h3>
+<h3><a href="#devel" class="anchor" id="devel"><span class="octicon octicon-link"></span></a>Developers and contributors</h3>
 <ul>
   {% for devel in page.developers %}
     <li>{{ devel }}</li>
   {% endfor %}
 </ul>
 
-<h3><a href="#license" class="anchor" name="license"><span class="octicon octicon-link"></span></a>License</h3>
+<h3><a href="#license" class="anchor" id="license"><span class="octicon octicon-link"></span></a>License</h3>
 <ul>
   <li>{{ page.license }}</li>
 </ul>
 <!-- end of info block -->
 
 <!-- install block -->
-<h2><a href="#install" class="anchor" name="install"><span class="octicon octicon-link"></span></a>Installation</h2>
+<h2><a href="#install" class="anchor" id="install"><span class="octicon octicon-link"></span></a>Installation</h2>
 
-<h3><a href="#instruction" class="anchor" name="instruction"><span class="octicon octicon-link"></span></a>Instruction</h3>
-<h4><a href="#singleapp" class="anchor" name="singleapp"><span class="octicon octicon-link"></span></a>Build as a single application</h4>
+<h3><a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Instruction</h3>
+<h4><a href="#singleapp" class="anchor" id="singleapp"><span class="octicon octicon-link"></span></a>Build as a single application</h4>
 <ul>
   <li>Download the actual source <a href="https://github.com/arcan1s/reportabug/releases" title="GitHub">tarball</a>.</li>
   <li>Extract it and set up your configuration.</li>
@@ -49,7 +49,7 @@ sudo make install
   </li>
 </ul>
 
-<h4><a href="#aslibrary" class="anchor" name="aslibrary"><span class="octicon octicon-link"></span></a>Build as a library in your project</h4>
+<h4><a href="#aslibrary" class="anchor" id="aslibrary"><span class="octicon octicon-link"></span></a>Build as a library in your project</h4>
 <ul>
   <li>Download the actual source <a href="https://github.com/arcan1s/reportabug/releases" title="GitHub">tarball</a>.</li>
   <li>Extract it and set up your configuration.</li>
@@ -73,7 +73,7 @@ reportWindow->showWindow();
   <li>Link your application with this library.</li>
 </ul>
 
-<h4><a href="#cmakeflags" class="anchor" name="cmakeflags"><span class="octicon octicon-link"></span></a>Available cmake flags:</h4>
+<h4><a href="#cmakeflags" class="anchor" id="cmakeflags"><span class="octicon octicon-link"></span></a>Available cmake flags:</h4>
 <ul>
   <li><code>-DBUILD_AS_LIBRARY=0</code> - build the application but not a library.</li>
   <li><code>-DBUILD_DOCS=1</code> - build developer documentation.</li>
@@ -84,7 +84,7 @@ reportWindow->showWindow();
   <li><code>-DUSE_QT5=0</code> - use Qt4 instead of Qt5.</li>
 </ul>
 
-<h3><a href="#dependencies" class="anchor" name="dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h3>
+<h3><a href="#dependencies" class="anchor" id="dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h3>
 <p>I want note that all were tested on latest version of dependencies.</p>
 <ul>
   <li>qt5-base <i>(if Qt5 is used)</i> <b>or</b> qt4 <i>(if Qt4 is used)</i></li>
@@ -97,8 +97,8 @@ reportWindow->showWindow();
 <!-- end of install block -->
 
 <!-- howto block -->
-<h2><a href="#howto" class="anchor" name="howto"><span class="octicon octicon-link"></span></a>How to use</h2>
-<h3><a href="#github" class="anchor" name="github"><span class="octicon octicon-link"></span></a>GitHub module</h3>
+<h2><a href="#howto" class="anchor" id="howto"><span class="octicon octicon-link"></span></a>How to use</h2>
+<h3><a href="#github" class="anchor" id="github"><span class="octicon octicon-link"></span></a>GitHub module</h3>
 
 <p>This module creates an issue over GitHub. <a href="https://developer.github.com/v3/issues/" title="Documentation">GitHub API</a> is used for creating issue. User should type own username and password. The typical POST request is:</p>
 
@@ -123,16 +123,16 @@ curl -X POST -H "Authorization: token token" -d '{"title":"A new bug","body":"So
 
 <p>This module requires <code>QtNetwork</code> module.</p>
 
-<h3><a href="#gitreports" class="anchor" name="gitreports"><span class="octicon octicon-link"></span></a>GitReports module</h3>
+<h3><a href="#gitreports" class="anchor" id="gitreports"><span class="octicon octicon-link"></span></a>GitReports module</h3>
 <p>This module creates issue over <a href="https://gitreports.com/about" title="GitReports">GitReports</a>. Please visit <a href="https://gitreports.com/" title="GitReports">this page</a> and set up it for your repository.</p>
 
 <p>To disable this module use <code>-DENABLE_GITREPORT=0</code> cmake flag. This module requires <code>QtNetwork</code> and <code>QtWebKit</code> modules.</p>
 <!-- end of howto block -->
 
 <!-- config block -->
-<h2><a href="#config" class="anchor" name="config"><span class="octicon octicon-link"></span></a>Configuration</h2>
+<h2><a href="#config" class="anchor" id="config"><span class="octicon octicon-link"></span></a>Configuration</h2>
 <p>For the developer configuration please use <code>config.h</code> header. Also you may load parametrs dynamically using <code>params</code> array (needed keys is the same as for the header</p>
-<h3><a href="#mainconfig" class="anchor" name="mainconfig"><span class="octicon octicon-link"></span></a>Main configuration</h3>
+<h3><a href="#mainconfig" class="anchor" id="mainconfig"><span class="octicon octicon-link"></span></a>Main configuration</h3>
 <ul>
   <li><code>OWNER</code> - the owner of the source repository.</li>
   <li><code>PROJECT</code> - the project name.</li>
@@ -143,13 +143,13 @@ curl -X POST -H "Authorization: token token" -d '{"title":"A new bug","body":"So
   <li><code>TAG_MILESTONE</code> - set this milestone to an issue. It may be used only for GitHub module. This tag will work only if user has push access. If it will be empty, it will be ignored.</li>
 </ul>
 
-<h3><a href="#githubconfig" class="anchor" name="githubconfig"><span class="octicon octicon-link"></span></a>GitHub module settings</h3>
+<h3><a href="#githubconfig" class="anchor" id="githubconfig"><span class="octicon octicon-link"></span></a>GitHub module settings</h3>
 <ul>
   <li><code>GITHUB_COMBOBOX</code> - text of this module into comboBox.</li>
   <li><code>ISSUES_URL</code> - issues url, in the most cases do not touch it. Default is <code>https://api.github.com/repos/$OWNER/$PROJECT/issues</code>. Available tags here are <code>$PROJECT</code>, <code>$OWNER</code>.</li>
 </ul>
 
-<h3><a href="#gitreportsconfig" class="anchor" name="gitreportsconfig"><span class="octicon octicon-link"></span></a>GitReports module settings</h3>
+<h3><a href="#gitreportsconfig" class="anchor" id="gitreportsconfig"><span class="octicon octicon-link"></span></a>GitReports module settings</h3>
 <ul>
   <li><code>CAPTCHA_URL</code> - captcha url, in the most cases do not touch it. Default is <code>https://gitreports.com/simple_captcha?code=</code>.</li>
   <li><code>GITREPORT_COMBOBOX</code> - text of this module into comboBox.</li>
