--- a/ru/_posts/2014-01-21-building-qutim-using-qt5.html
+++ b/ru/_posts/2014-01-21-building-qutim-using-qt5.html
@@ -8,10 +8,10 @@ title: Сборка Qutim с Qt5
 short: building-qutim-using-qt5
 description: Если кто-то не знает, <a href="http://qutim.org" title="Домашняя страница Qutim">Qutim</a> - мультипротокольный кросс-платформенный месседжер. Написан он на <code>CPP</code> с использованием библиотек Qt. Проект активно развивается. В этой статье речь пойдет о реализации сборки данного пакета в Archlinux с использованием библиотек Qt5 (а не Qt4, как это делают текущие пакеты в AUR).
 ---
-<h2><a href="#problems" class="anchor" name="problems"><span class="octicon octicon-link"></span></a>Что не так?</h2>
+<h2><a href="#problems" class="anchor" id="problems"><span class="octicon octicon-link"></span></a>Что не так?</h2>
 <p>Да все так. Просто пакет использует для сборки систему <a href="http://qt-project.org/wiki/qbs" title="Wiki">qbs</a>, которая, на мой взгляд, немного странная. Пакет, необходимый для сборки, <a href="https://aur.archlinux.org/packages/qbs-git/" title="AUR">находится в AUR</a> (рекомендую git-версию). Когда я спросил у Andrea Scarpino (который сопровождает все KDE и Qt пакеты в официальные репозитории) по поводу переноса этого пакета в репозитории, он ответил, что всему свое время. В принципе, я с ним согласен, так как проект, судя по всему, еще немного сыроват.</p>
 
-<h2><a href="#prepare" class="anchor" name="prepare"><span class="octicon octicon-link"></span></a>Подготовка</h2>
+<h2><a href="#prepare" class="anchor" id="prepare"><span class="octicon octicon-link"></span></a>Подготовка</h2>
 <p>Установим зависимости. Что-то может быть пропустил, зависимости сканировал с использованием <code>namcap</code>:</p>
 
 {% highlight bash %}
@@ -19,7 +19,7 @@ pacman -Sy --asdeps clang git libc++abi qt5-quick1 qt5-x11extras
 yaourt -S --asdeps jreen-git qbs-git
 {% endhighlight %}
 
-<h3><a href="#qbs" class="anchor" name="qbs"><span class="octicon octicon-link"></span></a>Настройка qbs</h3>
+<h3><a href="#qbs" class="anchor" id="qbs"><span class="octicon octicon-link"></span></a>Настройка qbs</h3>
 <p>Желающие могут почитать документацию <a href="http://qt-project.org/wiki/qbs" title="Wiki">по ссылке</a> или посмотреть примеры (включены в пакет). Загвоздка в том, что эта штука использует файл настроек, который, во-первых, нужно сначала сгенерировать, во-вторых, хранится в домашней директории (и только там). В теории, генерация файла настроек (<code>~/.config/QtProject/qbs.conf</code>) происходит следующим образом:</p>
 
 {% highlight bash %}
@@ -74,7 +74,7 @@ qutim\qbs\toolchain=clang, llvm, gcc
 
 <p><a href="/resources/docs/qutim-qt5-git/qbs-qutim.conf" title="Файл" type="text/plain">qbs-qutim.conf</a></p>
 
-<h3><a href="#patch" class="anchor" name="patch"><span class="octicon octicon-link"></span></a>Готовим патч для исходников</h3>
+<h3><a href="#patch" class="anchor" id="patch"><span class="octicon octicon-link"></span></a>Готовим патч для исходников</h3>
 <p>Первая проблема - <code>clang</code> (по крайней мере, в Archlinux):</p>
 
 {% highlight diff %}
@@ -110,7 +110,7 @@ diff -ruN qutim.orig/protocols/vkontakte/vreen/vreen.qbs qutim/protocols/vkontak
 
 <p><a href="/resources/docs/qutim-qt5-git/qutim-qbs-1.1.patch" title="Файл" type="text/plain">qutim-qbs-1.1.patch</a></p>
 
-<h3><a href="#sources" class="anchor" name="sources"><span class="octicon octicon-link"></span></a>Получаем исходники</h3>
+<h3><a href="#sources" class="anchor" id="sources"><span class="octicon octicon-link"></span></a>Получаем исходники</h3>
 
 {% highlight bash %}
 # клонируем репозиторий
@@ -128,7 +128,7 @@ cd ..
 patch -p0 -i qutim-qbs-1.1.patch
 {% endhighlight %}
 
-<h2><a href="#build" class="anchor" name="build"><span class="octicon octicon-link"></span></a>Сборка</h2>
+<h2><a href="#build" class="anchor" id="build"><span class="octicon octicon-link"></span></a>Сборка</h2>
 
 {% highlight bash %}
 cd qutim
@@ -137,7 +137,7 @@ HOME=$(pwd) qbs -j $(nproc) -d ../build release profile:qutim
 
 <p>Я пытался сделать универсальный способ сборки пакета, поэтому такое странное переназначение домашней директории. Флаг <code>-j</code> указывает число потоков сборки, флаг <code>-d</code> директорию сборки, <code>release</code> тип сборки (debug, release), <code>profile</code> используемый профиль, описанный в файле настроек.</p>
 
-<h2><a href="#install" class="anchor" name="install"><span class="octicon octicon-link"></span></a>Установка</h2>
+<h2><a href="#install" class="anchor" id="install"><span class="octicon octicon-link"></span></a>Установка</h2>
 
 {% highlight bash %}
 HOME=$(pwd) sudo qbs install -d ../build --install-root "/usr" profile:qutim
@@ -145,7 +145,7 @@ HOME=$(pwd) sudo qbs install -d ../build --install-root "/usr" profile:qutim
 
 <p>Из нового - указание корневого каталога (<code>--install-root</code>). Без этого пакет будет установлен в <code>/</code> (<code>/bin</code> и <code>/lib</code>).</p>
 
-<h2><a href="#pkgbuild" class="anchor" name="pkgbuild"><span class="octicon octicon-link"></span></a>PKGBUILD</h2>
+<h2><a href="#pkgbuild" class="anchor" id="pkgbuild"><span class="octicon octicon-link"></span></a>PKGBUILD</h2>
 
 {% highlight bash %}
 pkgname=qutim-qt5-git
