--- a/ru/index.html
+++ b/ru/index.html
@@ -31,8 +31,8 @@ title: arcanis
       </header>
       <section>
 
-<h3><a href="#welcome" class="anchor" name="welcome"><span class="octicon octicon-link"></span></a>Добро пожаловать</h3>
+<h3><a href="#welcome" class="anchor" id="welcome"><span class="octicon octicon-link"></span></a>Добро пожаловать</h3>
 <p>Добро пожаловать на мою домашнюю страничку, <code>`echo $USERNAME`</code>. Обо мне Вы можете прочитать по <a href="/ru/about" title="Обо мне">ссылке</a>. К сожалению, я не знаю html/php/ruby/прочее (но я знаю Google-фу! По крайней мере, я так думаю), поэтому эта страничка может выглядеть не очень красиво. Но я старался (ну или не совсем). В блоге я буду писать какие-нибудь статьи о науке, программировании, проживании в Archlinux и, может быть, о сопровождении пакетов. Также я создам странички для некоторых из <a href="https://github.com/arcan1s" title="GitHub">моих проектов</a>.</p>
 
-<h3><a href="#contact" class="anchor" name="contact"><span class="octicon octicon-link"></span></a>Контакты</h3>
+<h3><a href="#contact" class="anchor" id="contact"><span class="octicon octicon-link"></span></a>Контакты</h3>
 <p>Если у Вас есть вопрос или что-нибудь еще, Вы можете <a href="/ru/about" title="Обо мне">связаться со мной</a>. Если Вы хотите предложить пул-реквест или сообщить о баге для этих страничек, не стесняйтесь посетить <a href="https://github.com/arcan1s/arcan1s.github.io" title="Репозиторий сайта">репозиторий на GitHub</a> и сделать это.</p>
