--- a/ru/projects/index.html
+++ b/ru/projects/index.html
@@ -116,9 +116,9 @@ groups:
       <section>
 
 {% for group in page.groups %}
-  <h1><a href="#{{ group.short }}" class="anchor" name="{{ group.short }}"><span class="octicon octicon-link"></span></a>{{ group.title }}</a></h1>
+  <h1><a href="#{{ group.short }}" class="anchor" id="{{ group.short }}"><span class="octicon octicon-link"></span></a>{{ group.title }}</a></h1>
   {% for project in group.projects %}
-    <h2><a href="#{{ project.short }}" class="anchor" name="{{ project.short }}"><span class="octicon octicon-link"></span></a>{{ project.title }}</h2>
+    <h2><a href="#{{ project.short }}" class="anchor" id="{{ project.short }}"><span class="octicon octicon-link"></span></a>{{ project.title }}</h2>
     <p>{{ project.description }}</p>
     <p><ul>
       {% for link in project.links %}
