--- a/ru/projects/queued.html
+++ b/ru/projects/queued.html
@@ -13,7 +13,7 @@ license: GPLv3
 links:
 ---
 <!-- info block -->
-<h2><a href="#info" class="anchor" name="info"><span class="octicon octicon-link"></span></a>Информация</h2>
+<h2><a href="#info" class="anchor" id="info"><span class="octicon octicon-link"></span></a>Информация</h2>
 <p>Демон для запуска задач в очередь вычислений. Был создан, как proof-of-concept.</p>
 
 {% highlight bash %}
@@ -39,23 +39,23 @@ Parameters:
     -h   --help               - show this help and exit
 {% endhighlight %}
 
-<h3><a href="#devel" class="anchor" name="devel"><span class="octicon octicon-link"></span></a>Разработчики</h3>
+<h3><a href="#devel" class="anchor" id="devel"><span class="octicon octicon-link"></span></a>Разработчики</h3>
 <ul>
   {% for devel in page.developers %}
     <li>{{ devel }}</li>
   {% endfor %}
 </ul>
 
-<h3><a href="#license" class="anchor" name="license"><span class="octicon octicon-link"></span></a>Лицензия</h3>
+<h3><a href="#license" class="anchor" id="license"><span class="octicon octicon-link"></span></a>Лицензия</h3>
 <ul>
   <li>{{ page.license }}</li>
 </ul>
 <!-- end of info block -->
 
 <!-- install block -->
-<h2><a href="#install" class="anchor" name="install"><span class="octicon octicon-link"></span></a>Установка</h2>
+<h2><a href="#install" class="anchor" id="install"><span class="octicon octicon-link"></span></a>Установка</h2>
 
-<h3><a href="#instruction" class="anchor" name="instruction"><span class="octicon octicon-link"></span></a>Инструкция</h3>
+<h3><a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Инструкция</h3>
 <ul>
   <li><p>Скачайте <a href="https://github.com/arcan1s/queued/releases" title="GitHub">архив</a> с актуальной версией исходных файлов.</p></li>
   <li><p>Извлеките из него файлы и установите приложение:</p>
@@ -73,7 +73,7 @@ sudo ./install.sh
 <p>Если путь не указан, пакет будет установлен в <code>/</code>.</p></li>
 </ul>
 
-<h3><a href="#dependencies" class="anchor" name="dependencies"><span class="octicon octicon-link"></span></a>Зависимости</h3>
+<h3><a href="#dependencies" class="anchor" id="dependencies"><span class="octicon octicon-link"></span></a>Зависимости</h3>
 <p>Все было протестировано на последних версиях зависимостей.</p>
 <ul>
   <li>Bash (включая awk, grep, sed)</li>
@@ -82,7 +82,7 @@ sudo ./install.sh
 <!-- end of install block -->
 
 <!-- howto block -->
-<h2><a href="#howto" class="anchor" name="howto"><span class="octicon octicon-link"></span></a>Использование</h2>
+<h2><a href="#howto" class="anchor" id="howto"><span class="octicon octicon-link"></span></a>Использование</h2>
 <p>Если Вы хотите запустить демон, просто запустите</p>
 
 {% highlight bash %}
@@ -119,7 +119,7 @@ ExecStart=/usr/bin/queued
 ExecStart=/usr/bin/queued -c /path/to/new/queued.conf
 {% endhighlight %}
 
-<h3><a href="#adding" class="anchor" name="adding"><span class="octicon octicon-link"></span></a>Добавление задачи</h3>
+<h3><a href="#adding" class="anchor" id="adding"><span class="octicon octicon-link"></span></a>Добавление задачи</h3>
 <ol>
   <li>Создайте скрипт с командой (например, с именем <code>script.sh</code>).</li>
   <li>Создайте файл с приоритетом (<code>script.sh.pr</code>) для данной задачи, если это необходимо.</li>
@@ -128,7 +128,7 @@ ExecStart=/usr/bin/queued -c /path/to/new/queued.conf
 </ol>
 <p>Также Вы можете воспользоваться <code>add_queued</code>.</p>
 
-<h2><a href="#configuration" class="anchor" name="configuration"><span class="octicon octicon-link"></span></a>Настройка</h2>
+<h2><a href="#configuration" class="anchor" id="configuration"><span class="octicon octicon-link"></span></a>Настройка</h2>
 <p>Все настройки хранятся в <code>/etc/queued.conf</code>. После редактирования, Вы должны перезапустить демон</p>
 
 {% highlight bash %}
@@ -137,7 +137,7 @@ systemctl restart queued
 <!-- end of howto block -->
 
 <!-- config block -->
-<h3><a href="#options" class="anchor" name="options"><span class="octicon octicon-link"></span></a>Опции</h3>
+<h3><a href="#options" class="anchor" id="options"><span class="octicon octicon-link"></span></a>Опции</h3>
 <table>
   <tr>
     <th>WORKDIR</th>
